--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>1.2</version>
             <optional>false</optional>
         </dependency>
+        <dependency>
+            <groupId>org.graphstream</groupId>
+            <artifactId>gs-algo</artifactId>
+            <version>1.2</version>
+            <optional>false</optional>
+        </dependency>
     </dependencies>
 
     
